--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,65 @@
   padding: 0;
   margin: 0;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  width: 60%;
+  height: 100vh;
+  margin: 0 auto;
+}
+
+.slider-wrapper {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 80vh;
+}
+
+.prev i,
+.next i {
+  cursor: pointer;
+}
+
+.prev,
+.next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  padding: 0 20px;
+}
+
+.images {
+  width: 100%;
+  height: 100%;
+}
+
+.images img {
+  width: 100%;
+  height: 100%;
+}
+
+.img-nav {
+  position: absolute;
+  left: 50%;
+  bottom: 5%;
+  transform: translateX(-50%);
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 20px;
+}
+
+.img-nav .circle {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background-color: white;
+  margin: 0 10px;
+}
+
+.img-nav .circle.active {
+  background-color: blue;
+}
